file-stats-service/k8/k8.yml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: file-stats-service-deployment
  labels:
    app: file-stats-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: file-stats-service
  template:
    metadata:
      labels:
        app: file-stats-service
    spec:
      containers:
      - name: file-stats-service
        image: registry.cloud.sdu.dk/sdu-cloud/file-stats-service:1.2.7
        livenessProbe:
          httpGet:
            port: 8080
            path: /status
          initialDelaySeconds: 3
          periodSeconds: 30
          failureThreshold: 5
        command:
        - /opt/service/bin/service
        - --config-dir
        - /etc/refresh-token
        - --config-dir
        - /etc/token-validation
        volumeMounts:
        - mountPath: /etc/refresh-token
          name: refresh-token
        - mountPath: /etc/token-validation
          name: token-validation

      volumes:
      - name: refresh-token
        secret:
          optional: false
          secretName: file-stats-refresh-token
      - name: token-validation
        configMap:
          name: token-validation

      imagePullSecrets:
        - name: esci-docker
